switched to mysql db

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,14 @@
+spring.datasource.url: jdbc:mysql://127.0.0.1/moonlander_prod
+spring.datasource.username=username
+spring.datasource.password=password
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 logging.level.org.springframework.web=INFO
 logging.file=moonlander-monitor.log
-
-app.redis.host=127.0.0.1
-app.redis.port=6379
 
 moonlander.logfile=/home/waldek/bfgminer_5.4.2-futurebit2_linux_armv6/output.log
