--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,13 @@
-spring.datasource.url: jdbc:mysql://127.0.0.1/moonlander_dev
-spring.datasource.username=username
-spring.datasource.password=password
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=test
+spring.datasource.password=test
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web=DEBUG
 logging.file=moonlander-monitor.log
 
-moonlander.logfile=/home/waldek/output.log
+moonlander.logfile=sample_output.txt
